[tool.poetry]
name = "x-python"
version = "0.1.0"
description = ""
authors = ["kiuter1 <ytigraman875@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
